<resources>
    <string name="app_name">BackOffice</string>
    <string name="logintxtUsuario">USUARIO</string>
    <string name="logintxtPassword">PASSWORD</string>
    <string name="loginbtnIngresar">INGRESAR</string>
    <string name="logindescLogo">logo</string>
    <string name="menuPrincipalbtnEntrega">ENTREGA EQUIPOS</string>
    <string name="menuPrincipalbtnRecibo">RECIBO EQUIPOS</string>
    <string name="menuPrincipalbtnLogout">SALIR</string>
    <string name="menuPrincipallblBienvenido">BIENVENIDO</string>
    <string name="menuPrincipaltxtBienvenida">Usuario</string>
    <string name="menuEntregatxtBP">INGRESAR BP</string>
    <string name="menuEntregabtnScanerInterfonia">SCANEAR INTERFONIA</string>
    <string name="menuEntregabtnScanerTablet">SCANEAR TABLET</string>
    <string name="menuEntregabtnScaner">SCANEAR MOCHILA</string>
    <string name="menuEntregabtnConfirmar">CONFIRMAR ELEMENTOS</string>
    <string name="menuEntregatxtMochila">MOCHILA</string>
    <string name="menuEntregatxtInterfonia">INTERFONIA</string>
    <string name="menuEntregatxtTablet">TABLET</string>
    <string name="menuEntregatxtBO">FUNCIONARIO</string>
    <string name="menuEntregatxtBONombre">Nombre</string>
    <string name="confirmaEntregalblFecha">FECHA</string>
    <string name="confirmaEntregalblHora">HORA</string>
    <string name="confirmaEntregalblBP">BP</string>
    <string name="confirmaEntregalblMochila">MOCHILA</string>
    <string name="confirmaEntregalblInterfonia">INTERFONIA</string>
    <string name="confirmaEntregalblTablet">TABLET</string>
    <string name="confirmaEntregatxtFecha">FECHA ACTUAL</string>
    <string name="confirmaEntregatxtHora">HORA ACTUAL</string>
    <string name="confirmaEntregatxtBP">BP COT</string>
    <string name="confirmaEntregatxtMochila">MOCHILA ENTREGADA</string>
    <string name="confirmaEntregatxtInterfonia">INTERFONIA ENTREGADA</string>
    <string name="confirmaEntregatxtTablet">TABLET ENTREGADA</string>
    <string name="confirmaEntregabtniraMenuPpal">FINALIZAR ENTREGA</string>
    <string name="menuRecibirbtnBP"> VERIFICAR ELEMENTOS </string>
    <string name="menuRecibirlblFechayHora"> FECHA Y HORA DE ENTREGA </string>
    <string name="menuRecibirlblMochila"> MOCHILA </string>
    <string name="menuRecibirlblInterfonia"> INTERFONIA </string>
    <string name="menuRecibirlblTablet"> TABLET </string>
    <string name="menuRecibirtxtMochila"></string>
    <string name="menuRecibirtxtInterfonia"></string>
    <string name="menuRecibirtxtTablet"></string>
    <string name="cerrrarPopUp">X</string>
    <string name="mensajePopUp">Mensaje</string>
    <string name="detallePopUp">----------DETALLE----------</string>
    <string name="mochilaPopUp">MOCHILA</string>
    <string name="interfoniaPopUp">INTERFONIA</string>
    <string name="tabletPopUp">TABLET</string>
    <string name="btnListoPopUp">LISTO</string>
    <string name="btnVolverPopUp">VOLVER</string>
    <string name="btnObservacionesPopUp">OBSERVACIONES</string>
    <string name="estadoPopUp">ESTADO</string>
    <string name="inventariotxtInventario">INVENTARIO</string>
    <string name="senaleraA">SEÑA-A</string>
    <string name="senaleraB">SEÑA-B</string>
    <string name="buscar">BUSCAR</string>
    <string name="scanner">SCANNEAR</string>
    <string name="cable">CABLE</string>
    <string name="elelemento">EL ELEMENTO ESTA</string>
    <string name="cambio">C</string>
    <string name="perdido">P</string>
    <string name="confirmarLista">Confirma Lista</string>
    <string name="confirmarRecibo">Confirma Recibo</string>
    <string name="volver"> ATRAS </string>


</resources>
